--- a/LeFrenchMelee.Web/Views/Tournament/Create.cshtml
+++ b/LeFrenchMelee.Web/Views/Tournament/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model LeFrenchMelee.Web.Models.TournamentViewModel
+﻿@using LeFrenchMelee.Model.Enum
+@model LeFrenchMelee.Web.Models.TournamentViewModel
 @{
     ViewBag.Title = "Créer un tournoi";
 }
@@ -6,38 +7,65 @@
 
 @using (Html.BeginForm("Create", "Tournament", FormMethod.Post, new { @id = "createForm", @class = "form-horizontal" }))
 {
-    <div class="form-group">
-        @Html.LabelFor(model => model.Name, new { @class = "col-xs-2 control-label" })
-        <div class="col-xs-10">
-            @Html.TextBoxFor(model => model.Name, new { @class = "form-control" })
-            <span class="text-danger">
-                @Html.ValidationMessageFor(model => model.Name)
-            </span>
+    <div id="accordion">
+        <h3>Général</h3>
+        <div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Name, new { @class = "col-xs-2 control-label" })
+                <div class="col-xs-10">
+                    @Html.TextBoxFor(model => model.Name, new { @class = "form-control" })
+                    <span class="text-danger">
+                        @Html.ValidationMessageFor(model => model.Name)
+                    </span>
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.Place, new { @class = "col-xs-2 control-label" })
+                <div class="col-xs-10">
+                    @Html.TextBoxFor(model => model.Place, new { @class = "form-control" })
+                    <span class="text-danger">
+                        @Html.ValidationMessageFor(model => model.Place)
+                    </span>
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.StartDate, new { @class = "col-xs-2 control-label" })
+                <div class="col-xs-10">
+                    @Html.TextBoxFor(model => model.StartDate, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.StartDate)
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(model => model.EndDate, new { @class = "col-xs-2 control-label" })
+                <div class="col-xs-10">
+                    @Html.TextBoxFor(model => model.EndDate, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.EndDate)
+                </div>
+            </div>
+        </div>
+        <h3>Informations supplémentaires</h3>
+        <div id="additionalFields">
+            <div class="form-group">
+                <div class="col-xs-2">
+                    <input type="text" class="form-control" name="AdditionalFields[0].Key" placeholder="Nom du champ..." />
+                </div>
+                <div class="col-xs-3">
+                    <div class="input-group field">
+                        @*<select class="form-control">
+                            <option value="" disabled selected>Type de champ</option>
+                            <option value="Texte">Texte</option>
+                            <option value="Nombre">Nombre</option>
+                        </select>*@
+                        @Html.DropDownList("AdditionalFields[0].Value", EnumHelper.GetSelectList(typeof(FormFieldType)), "Type de champ", new { @class = "form-control" })
+                        <span class="input-group-btn">
+                            <button type="button" class="btn btn-primary add-field"><span class="glyphicon glyphicon-plus"></span></button>
+                        </span>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="form-group">
-        @Html.LabelFor(model => model.Place, new { @class = "col-xs-2 control-label" })
-        <div class="col-xs-10">
-            @Html.TextBoxFor(model => model.Place, new { @class = "form-control" })
-            <span class="text-danger">
-                @Html.ValidationMessageFor(model => model.Place)
-            </span>
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(model => model.StartDate, new { @class = "col-xs-2 control-label" })
-        <div class="col-xs-10">
-            @Html.TextBoxFor(model => model.StartDate, new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.StartDate)
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(model => model.EndDate, new { @class = "col-xs-2 control-label" })
-        <div class="col-xs-10">
-            @Html.TextBoxFor(model => model.EndDate, new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.EndDate)
-        </div>
-    </div>
+    <br />
     <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
             <button type="submit" class="btn btn-default">Créer</button>
