--- a/LeFrenchMelee.Web/Views/Shared/_Layout.cshtml
+++ b/LeFrenchMelee.Web/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
         </footer>
     </div>
 
+    <script type="text/javascript" src="~/Scripts/lodash.js"></script>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/internationalization")
     @Scripts.Render("~/bundles/bootstrap")
