--- a/LeFrenchMelee.Web/Views/Tournament/Create.cshtml
+++ b/LeFrenchMelee.Web/Views/Tournament/Create.cshtml
@@ -8,11 +8,11 @@
 <div id="templateField" class="hidden">
     <div class="form-group additional-field">
         <div class="col-xs-2">
-            <input type="text" class="form-control" name="AdditionalFields[0].Key" placeholder="Nom du champ..." />
+            <input type="text" class="form-control" required name="templateKey" placeholder="Nom du champ..." />
         </div>
         <div class="col-xs-3">
             <div class="input-group field">
-                @Html.DropDownList("AdditionalFields[0].Value", EnumHelper.GetSelectList(typeof(FormFieldType)), "Type de champ", new { @class = "form-control" })
+                @Html.DropDownList("templateValue", EnumHelper.GetSelectList(typeof(FormFieldType)), "Type de champ", new { @class = "form-control", @required = "" })
                 <span class="input-group-btn">
                     <button type="button" class="btn btn-primary add-field"><span class="glyphicon glyphicon-plus"></span></button>
                 </span>
@@ -59,15 +59,15 @@
                 </div>
             </div>
         </div>
-        <h3>Informations supplémentaires</h3>
+        <h3>Formulaire d'inscription</h3>
         <div id="additionalFields">
             <div class="form-group additional-field">
                 <div class="col-xs-2">
-                    <input type="text" class="form-control" name="AdditionalFields[0].Key" placeholder="Nom du champ..." />
+                    <input type="text" class="form-control" placeholder="Nom du champ..." />
                 </div>
                 <div class="col-xs-3">
                     <div class="input-group field">
-                        @Html.DropDownList("AdditionalFields[0].Value", EnumHelper.GetSelectList(typeof(FormFieldType)), "Type de champ", new { @class = "form-control" })
+                        @Html.DropDownList("additionalValue", EnumHelper.GetSelectList(typeof(FormFieldType)), "Type de champ", new { @class = "form-control" })
                         <span class="input-group-btn">
                             <button type="button" class="btn btn-primary add-field"><span class="glyphicon glyphicon-plus"></span></button>
                         </span>
